prevented text wrapping in orders/details table

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -2,3 +2,6 @@ h4.condensed {
 	margin-top: 5px;
 	margin-bottom: 10px;
 }
+td.nowrap {
+    white-space: nowrap;
+}
